--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,6 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body ng-app="monitor">
-    <div ng-controller="DashboardController">
-        <div ng-include="'templates/weather.html'"></div>
-    </div>
+    <ng:view></ng:view>
 </body>
 </html>
